Creating URL from string directly is now deprecated